# BetterEdit

./: .clang-format  .gitignore  BetterEdit.cpp  BetterEdit.hpp  CMakeLists.txt  LICENSE  broken_guidelines.txt  convert_hooks.py  main.cpp  mod.json  utils.hpp
.github/actions/: build.yaml
.github/workflows/: build.yml
hooks/: CustomizeObjectLayer.cpp  EditLevelLayer.cpp  EditorPauseLayer.cpp  EditorPauseLayer.hpp  EditorUI.cpp  GJRotationControl.cpp  HSVWidgetPopup.cpp  LevelEditorLayer.cpp  LoadingLayer.cpp  PauseLayer.cpp  SetGroupIDLayer.cpp  SetupPickupTriggerPopup.cpp  UILayer.cpp  freezeFix.cpp  saveHook.cpp
nodes/: BGCheckbox.cpp  BGCheckbox.hpp  BrownAlertDelegate.cpp  BrownAlertDelegate.hpp  CMakeLists.txt  HorizontalSelectMenu.cpp  HorizontalSelectMenu.hpp  InputNode.cpp  InputNode.hpp  InputPrompt.cpp  InputPrompt.hpp  MonoSpaceLabel.cpp  PickMenu.cpp
nuts/: GDMake.h
src/tracking/: DispatchTracking.cpp
tools/AutoColorTriggers/: ColorTriggerPopup.cpp  ColorTriggerPopup.hpp  autoCT.cpp  autoCT.hpp
tools/AutoSave/: autoSave.cpp
tools/AutoSave/Backup/: BackupEditLayer.cpp  BackupListView.cpp  BackupScheduleLayer.cpp  BackupViewLayer.cpp  BackupViewLayer.hpp  LevelBackupManager.cpp  LevelBackupManager.hpp  backupBrowserHook.cpp  backupEverything.cpp  setupBackupButton.cpp
tools/ClickableDots/: BoomScrollLayer.cpp
tools/CustomKeybinds/: BEKeybinds.cpp  KeybindEditPopup.cpp  KeybindListView.cpp  KeybindManager.cpp  KeybindManager.hpp  KeybindRepeatPopup.cpp  KeybindSettingsLayer.cpp  KeybindingsLayer.cpp  KeybindingsLayer.hpp  KeymapLayer.cpp  dispatchHook.cpp
tools/CustomPasteState/: PasteLayer.cpp  PasteLayer.hpp  pasteHook.cpp
tools/CustomStartPos/: ellHook.cpp
tools/EditTab/: MoveInfoPopup.cpp  createMoveMenu.cpp  moveForCommand.cpp
tools/EditorLayerInput/: LayerEditPopup.cpp  LayerManager.cpp  LayerSettingsPopup.cpp  LayerViewPopup.cpp  editorLayerInput.cpp  editorLayerInput.hpp
tools/EnterToSearch/: loadEnterSearch.cpp
tools/ExtraObjectInfo/: extraInfo.cpp
tools/EyeDropper/: updateHook.cpp
tools/FLAlertLayerFix/: FLAlertLayerFix.cpp
tools/GridSize/: gridButton.cpp  gridButton.hpp  gridSize.cpp
tools/GroupIDFilter/: AdvancedFilterLayer.cpp  AdvancedFilterLayer.hpp  groupfilter.cpp  groupfilter.hpp  selectHook.cpp
tools/GroupSummary/: GroupListView.cpp  GroupSummaryPopup.cpp  MoreTriggersPopup.cpp
tools/Guidelines/: EnterBPMLayer.cpp  guidelineHook.cpp
tools/HighlightTriggers/: highlightTriggers.cpp
tools/IDRemap/: IDRemapPopup.cpp  remapHook.cpp  remapHook.hpp
tools/LevelPercent/: levelPercent.cpp
tools/PasteString/: loadPasteButton.cpp
tools/Presets/: PresetLayer.cpp  PresetLayer.hpp  browserHook.cpp  browserHook.hpp
tools/RGBColorInput/: RGBColorInputWidget.cpp  colorHook.cpp
tools/RotateSaws/: rotateSaws.cpp
tools/Screenshot/: screenshot.cpp  screenshot.hpp
tools/ScrollWheel/: editorScroll.cpp
tools/SliderImprovement/: GJScaleControl.cpp  passTouch.hpp
tools/VisibilityTab/: VisibilityToggle.cpp  VisibilityToggle.hpp  loadVisibilityTab.cpp
tools/gmd/: gmd.cpp  gmd.hpp
tools/other/: copyToClipboard.cpp  dashOrbLine.cpp  placeObjectsBefore.cpp  teleportScaleFix.cpp
tools/settings/: BESettingsLayer.cpp  BESettingsLayer.hpp
utils/: BGLabel.cpp  InfoButton.cpp  addTab.cpp  addTab.hpp  moveGameLayer.cpp
